# cscui-

./: .gitignore  CMakeLists.txt  Main.qml  main.cpp  readme.md  src.qrc
components/: Aboutme.qml  Accordion.qml  AlertDialog.qml  AnimatedWindow.qml  AreaChart.qml  Avatar.qml  BarChart.qml  BatteryCard.qml  BlurCard.qml  Button.qml  Calendar.qml  Card.qml  CardWithTextArea.qml  Carousel.qml  CheckBox.qml  Clock.qml  ClockCard.qml  ColorPicker.qml  CscDebugPanel.qml  CscDemoSection.qml  CscIconButton.qml  CscIdentityLayer.qml  CscScrollBar.qml  CscSectionHeader.qml  CscSegmentedControl.qml  DataTable.qml  Divider.qml  Drawer.qml  Dropdown.qml  EmptyState.qml  FitnessProgress.qml  HitokotoCard.qml  HoverCard.qml  Input.qml  List.qml  LoadingIndicator.qml  MenuButton.qml  MusicPlayer.qml  MusicWindow.qml  NavBar.qml  (+14 more)
core/: music.cpp  music.h
docs/: DESIGN_SYSTEM.md
pages/: BaseComponents.qml  NoBackgroundComponents.qml  OtherComponents.qml
scaffold/templates/basic/: CMakeLists.txt  Main.qml
scaffold/templates/basic/pages/: FavoritesPage.qml  HomePage.qml  SettingsPage.qml
scaffold/templates/mobile/: CMakeLists.txt  Main.qml
scaffold/templates/mobile/android/: AndroidManifest.xml
scaffold/templates/mobile/pages/: HomePage.qml  SearchPage.qml  SettingsPage.qml
scaffold/templates/productivity/: CMakeLists.txt  Main.qml  main.cpp  package.bat
scaffold/templates/productivity/pages/: CalendarPage.qml  FavoritesPage.qml  ReportsPage.qml  SettingsPage.qml  TasksPage.qml
tools/: New-CscuiProject.bat  New-CscuiProject.ps1  New-CscuiProject.sh  New-EvolveUIProject.bat  New-EvolveUIProject.ps1  New-EvolveUIProject.sh
